--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -3765,13 +3765,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "b60ed72a-14a4-45d1-8325-e6aea1c5e3fa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Investigate FIPS value for"
+    "# Investigate FIPS value for\n",
+    "population_df = pd.read_csv('../data/missing_fips_population_proportion.csv', sep='|', dtype={'FIPS':str})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "4268617a-6e56-4abe-85af-717ed8d58dbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 11 entries, 0 to 10\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column                        Non-Null Count  Dtype  \n",
+      "---  ------                        --------------  -----  \n",
+      " 0   City,State                    11 non-null     object \n",
+      " 1   County                        11 non-null     object \n",
+      " 2   State                         11 non-null     object \n",
+      " 3   Population                    11 non-null     int64  \n",
+      " 4   FIPS                          11 non-null     object \n",
+      " 5   Total City,State Population   11 non-null     int64  \n",
+      " 6   County Population Proportion  11 non-null     float64\n",
+      "dtypes: float64(1), int64(2), object(4)\n",
+      "memory usage: 744.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "population_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "f0cb17af-f877-4602-8d6a-54a88745bc87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1289005 entries, 0 to 1289004\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column                     Non-Null Count    Dtype         \n",
+      "---  ------                     --------------    -----         \n",
+      " 0   date                       1289005 non-null  datetime64[ns]\n",
+      " 1   county                     1289005 non-null  object        \n",
+      " 2   state                      1289005 non-null  object        \n",
+      " 3   fips                       1287165 non-null  object        \n",
+      " 4   cumulative cases to date   1289005 non-null  Int64         \n",
+      " 5   cumulative deaths to date  1289005 non-null  Int64         \n",
+      " 6   daily cases                1287165 non-null  Int64         \n",
+      " 7   daily deaths               1287165 non-null  Int64         \n",
+      " 8   county,state               1289005 non-null  object        \n",
+      "dtypes: Int64(4), datetime64[ns](1), object(4)\n",
+      "memory usage: 93.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "covid.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a2889db-5733-4157-9108-9833e05214c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
